package com.api.backend.entity;

public enum GameStatus {
ONGOING,
COMPLETED
}
