package com.api.backend.entity;

public enum GridValue {
ATTACKED,
NOT_ATTACKED
}
