package com.api.backend.entity;

public enum ShipStatus {
SUNK,
NOT_SUNK
}
